Fix download button position and gap.

--- a/src/content_script/main.sass
+++ b/src/content_script/main.sass
@@ -54,13 +54,14 @@ $harvest-yellow: rgb(241, 185, 26)
 
 .harvester
   +download-button-svg
+  order: 10 !important
   cursor: pointer
   -webkit-box-pack: start
   justify-content: flex-start
   -webkit-box-direction: normal
   -webkit-box-orient: horizontal
   flex-direction: row
-  margin-left: 3em
+  margin-left: 12px
   &.status
     min-height: 1.875rem
     // padding-left: 0.85rem
